add swagger validations in route/index
